24 August 2004 Andreas Fabri
- changes in doc_tex for pdflatex

24 June 2004 Sylvain Pion
- Compile fixes for g++ 3.4.

25 March 2004 Radu Ursu
- made doc work with the new implementation of the Manual tools

15 Mar 2004 Andreas Fabri
- Added missing #include <CGAL/iterator.h>  and CGAL_BEGIN_NAMESPACE to point_generators_d.h

Version 2.82 (09 February 2004) [rursu]
- Updated headers in examples

2.81 (18/01/04)
- Rename CGAL_TYPENAME_MSVC_NULL to typename.

2.80 (???)
- added point_generators_d.h header file. This file contains 
  Random_points_in_iso_box_d class.
  Modified the doc too.


2.78 (21 Oct 2003)
- fix headers

2.77 (17 Oct 2003)
- fixed the doc rcs_manual_demo.C and random_polygon_manual_demo.C 
  were converted to examples

2.76 (3 Oct 2003)
- cleanup of example

2.75 (3 Oct 2003)
- New gifs

2.74 (2 Oct 2003)
- Changed code that gets included in the user manual
- Added random segments to the demo

2.73 (1 Oct 2003)
- Moved \chapter to main.tex

2.72 (22 Sep 2003)
- new headers

2.71 (17 Sep 2003) [af]
- Removed Polygon_traits_2

2.70 (10 Sep 2003) [rursu]
- Qt_help_window class is in the namespace CGAL

2.69 (07 Sep 2003)
- [rursu] demo use now the new Qt_help_window class instead of HelpWindow
- [rursu] demo use new icon demoicon

2.68 (12 Aug 2003)
- Removed unused variable name from parameter list to get rid of warning[af]

2.67 (25 Jul 2003)
- modified the Generator doc (rursu)

2.66 (09 Jul 2003)
- replaced Leda based demo with Qt based demo (rursu)

2.65 (6  Apr 2003)
- G++ 3.4 support : add missing "this->".

2.64 (22 Aug 2002)
- default Creator now uses number type from given point types 
  instead of double; default creator is now documented

2.63 (12 Aug 2002)
   - replaced LEFTTURN and relatives with LEFT_TURN and relatives

%%%%%%%%%%%%%%%%%%% Release 2.4 %%%%%%%%%%%%%%%%%%%%%%%%

2.62 (2 May 2002)
   - removed reference to deleted section

2.61 (30 Apr 2002)
   - did manual split

2.60 (25 Apr 2002)